# jiraport

./: .gitignore  main.py  mise.toml  pyproject.toml  pytest.ini
jira_mine/: issues.py  output.py  utils.py
jiraport/: click_utils.py  issues.py  main.py  output.py  repl.py  utils.py
tests/: __init__.py  conftest.py  factories.py  test_integration.py  test_issues.py
