[project]
name = "jira-mine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "jira>=3.10.5",
    "pendulum>=3.1.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
    "ruff>=0.12.9"
]
