[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jiraport"
version = "0.1.0"
description = "A CLI tool for generating reports from JIRA issues using JQL queries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "jira>=3.10.5",
    "pendulum>=3.1.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
]

[project.scripts]
jiraport = "jiraport.main:cli"

[dependency-groups]
dev = [
    "factory_boy>=3.3.0",
    "ipython>=9.4.0",
    "nuitka>=2.7.12",
    "pyinstaller>=6.0.0",
    "pytest>=8.4.1",
    "pytest-vcr>=1.0.2",
    "ruff>=0.12.9",
    "vcrpy>=6.0.0",
]
